gen/escript/escriptParser.java
// Generated from N:/University/Compilers/src/escript\escript.g4 by ANTLR 4.8
package escript;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class escriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADDSET=1, SUBSET=2, MULSET=3, DIVSET=4, MODSET=5, POWSET=6, SET=7, POW=8, 
		MOD=9, MUL=10, DIV=11, ADD=12, SUB=13, AND=14, OR=15, GREATER_THAN=16, 
		GREATER_THAN_OR_EQUALS=17, LESS_THAN=18, LESS_THAN_OR_EQUALS=19, EQUALS=20, 
		NOT_EQUALS=21, NOT=22, TRUE=23, FALSE=24, IF=25, ELSEIF=26, ELSE=27, WHILE=28, 
		FOR=29, QUESTION=30, COLON=31, PRINT=32, SEP=33, EOS=34, LBRACE=35, RBRACE=36, 
		LPAREN=37, RPAREN=38, FUNCTION=39, RETURN=40, NUMBER=41, FLOAT=42, INTEGER=43, 
		ID=44, STRING=45, WS=46;
	public static final int
		RULE_start = 0, RULE_statement = 1, RULE_condition = 2, RULE_expression = 3;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "statement", "condition", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "'='", "'**'", "'%'", "'*'", 
			"'/'", "'+'", "'-'", "'&&'", "'||'", "'>'", "'>='", "'<'", "'<='", "'=='", 
			"'!='", "'!'", "'true'", "'false'", "'if'", "'else if'", "'else'", "'while'", 
			"'for'", "'?'", "':'", "'print'", "','", "';'", "'{'", "'}'", "'('", 
			"')'", "'function'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ADDSET", "SUBSET", "MULSET", "DIVSET", "MODSET", "POWSET", "SET", 
			"POW", "MOD", "MUL", "DIV", "ADD", "SUB", "AND", "OR", "GREATER_THAN", 
			"GREATER_THAN_OR_EQUALS", "LESS_THAN", "LESS_THAN_OR_EQUALS", "EQUALS", 
			"NOT_EQUALS", "NOT", "TRUE", "FALSE", "IF", "ELSEIF", "ELSE", "WHILE", 
			"FOR", "QUESTION", "COLON", "PRINT", "SEP", "EOS", "LBRACE", "RBRACE", 
			"LPAREN", "RPAREN", "FUNCTION", "RETURN", "NUMBER", "FLOAT", "INTEGER", 
			"ID", "STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "escript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public escriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(9); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(8);
				statement();
				}
				}
				setState(11); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUB) | (1L << NOT) | (1L << TRUE) | (1L << FALSE) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << PRINT) | (1L << EOS) | (1L << LBRACE) | (1L << LPAREN) | (1L << FUNCTION) | (1L << RETURN) | (1L << NUMBER) | (1L << ID) | (1L << STRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StatementForContext extends StatementContext {
		public TerminalNode FOR() { return getToken(escriptParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(escriptParser.LPAREN, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode EOS() { return getToken(escriptParser.EOS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(escriptParser.RPAREN, 0); }
		public StatementForContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStatementFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStatementFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStatementFor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementEOSContext extends StatementContext {
		public TerminalNode EOS() { return getToken(escriptParser.EOS, 0); }
		public StatementEOSContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStatementEOS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStatementEOS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStatementEOS(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementReturnContext extends StatementContext {
		public TerminalNode RETURN() { return getToken(escriptParser.RETURN, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode EOS() { return getToken(escriptParser.EOS, 0); }
		public StatementReturnContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStatementReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStatementReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStatementReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementConditionContext extends StatementContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode EOS() { return getToken(escriptParser.EOS, 0); }
		public StatementConditionContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStatementCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStatementCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStatementCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementWhileContext extends StatementContext {
		public TerminalNode WHILE() { return getToken(escriptParser.WHILE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementWhileContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStatementWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStatementWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStatementWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementModSetVarContext extends StatementContext {
		public Token left;
		public Token op;
		public ExpressionContext right;
		public TerminalNode EOS() { return getToken(escriptParser.EOS, 0); }
		public TerminalNode ID() { return getToken(escriptParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode MULSET() { return getToken(escriptParser.MULSET, 0); }
		public TerminalNode DIVSET() { return getToken(escriptParser.DIVSET, 0); }
		public TerminalNode MODSET() { return getToken(escriptParser.MODSET, 0); }
		public TerminalNode ADDSET() { return getToken(escriptParser.ADDSET, 0); }
		public TerminalNode SUBSET() { return getToken(escriptParser.SUBSET, 0); }
		public StatementModSetVarContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStatementModSetVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStatementModSetVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStatementModSetVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementPrintContext extends StatementContext {
		public TerminalNode PRINT() { return getToken(escriptParser.PRINT, 0); }
		public TerminalNode LPAREN() { return getToken(escriptParser.LPAREN, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(escriptParser.RPAREN, 0); }
		public TerminalNode EOS() { return getToken(escriptParser.EOS, 0); }
		public StatementPrintContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStatementPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStatementPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStatementPrint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementBlockContext extends StatementContext {
		public TerminalNode LBRACE() { return getToken(escriptParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(escriptParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementBlockContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStatementBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStatementBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStatementBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementAssignmentContext extends StatementContext {
		public TerminalNode ID() { return getToken(escriptParser.ID, 0); }
		public TerminalNode SET() { return getToken(escriptParser.SET, 0); }
		public TerminalNode EOS() { return getToken(escriptParser.EOS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public StatementAssignmentContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStatementAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStatementAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStatementAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementBranchContext extends StatementContext {
		public TerminalNode IF() { return getToken(escriptParser.IF, 0); }
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> ELSEIF() { return getTokens(escriptParser.ELSEIF); }
		public TerminalNode ELSEIF(int i) {
			return getToken(escriptParser.ELSEIF, i);
		}
		public TerminalNode ELSE() { return getToken(escriptParser.ELSE, 0); }
		public StatementBranchContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStatementBranch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStatementBranch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStatementBranch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementFunctionDeclarationContext extends StatementContext {
		public TerminalNode FUNCTION() { return getToken(escriptParser.FUNCTION, 0); }
		public List<TerminalNode> ID() { return getTokens(escriptParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(escriptParser.ID, i);
		}
		public TerminalNode LPAREN() { return getToken(escriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(escriptParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(escriptParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(escriptParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> SEP() { return getTokens(escriptParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(escriptParser.SEP, i);
		}
		public StatementFunctionDeclarationContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).enterStatementFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof escriptListener ) ((escriptListener)listener).exitStatementFunctionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof escriptVisitor ) return ((escriptVisitor<? extends T>)visitor).visitStatementFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			int _alt;
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new StatementBlockContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(13);
				match(LBRACE);
				setState(17);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUB) | (1L << NOT) | (1L << TRUE) | (1L << FALSE) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << PRINT) | (1L << EOS) | (1L << LBRACE) | (1L << LPAREN) | (1L << FUNCTION) | (1L << RETURN) | (1L << NUMBER) | (1L << ID) | (1L << STRING))) != 0)) {
					{
					{
					setState(14);
					statement();
					}
					}
					setState(19);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(20);
				match(RBRACE);
				}
				break;
			case 2:
				_localctx = new StatementAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(21);
				match(ID);
				setState(22);
				match(SET);
				setState(25);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(23);
					expression(0);
					}
					break;
				case 2:
					{
					setState(24);
					condition(0);
					}
					break;
				}
				setState(27);
				match(EOS);
				}
				break;
			case 3:
				_localctx = new StatementModSetVarContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(29);
				((StatementModSetVarContext)_localctx).left = match(ID);
				setState(30);
				((StatementModSetVarContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADDSET) | (1L << SUBSET) | (1L << MULSET) | (1L << DIVSET) | (1L << MODSET))) != 0)) ) {
					((StatementModSetVarContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(31);
				((StatementModSetVarContext)_localctx).right = expression(0);
				setState(32);
				match(EOS);
				}
				break;
			case 4:
				_localctx = new StatementBranchContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(34);
				match(IF);
				setState(35);
				condition(0);
				setState(36);
				statement();
				setState(43);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(37);
						match(ELSEIF);
						setState(38);
						condition(0);
						setState(39);
						statement();
						}
						} 
					}
					setState(45);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				setState(48);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(46);
					match(ELSE);
					setState(47);
					statement();
					}
					break;
				}
				}
				break;
			case 5:
				_localctx = new StatementWhileContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(50);
				match(WHILE);
				setState(51);
				condition(0);
				setState(52);
				statement();
				}
				break;
			case 6:
				_localctx = new StatementForContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(54);
				match(FOR);
				setState(55);
				match(LPAREN);
				setState(56);
				statement();
				setState(57);
				condition(0);
				setState(58);
				match(EOS);
				setState(59);
				expression(0);
				setState(60);
				match(RPAREN);
				setState(61);
				statement();
				}
				break;
			case 7:
				_localctx = new StatementPrintContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(63);
				match(PRINT);
				setState(64);
				match(LPAREN);
				setState(65);
				condition(0);
				setState(66);
				match(RPAREN);
				setState(67);
				match(EOS);
				}
				break;
			case 8:
				_localctx = new StatementFunctionDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(69);
				match(FUNCTION);
				setState(70);
				match(ID);
				setState(71);
				match(LPAREN);
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(72);
					match(ID);
					setState(77);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SEP) {
						{
						{
						setState(73);
						match(SEP);
						setState(74);
						match(ID);
						}
						}
						setState(79);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(82);
				match(RPAREN);
				setState(83);
				match(LBRACE);
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUB) | (1L << NOT) | (1L << TRUE) | (1L << FALSE) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << PRINT) | (1L << EOS) | (1L << LBRACE) | (1L << LPAREN) | (1L << FUNCTION) | (1L << RETURN) | (1L << NUMBER) | (1L << ID) | (1L << STRING))) != 0)) {
					{
					{
					setState(84);
					statement();
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(90);
				match(RBRACE);
				}
				break;
			case 9:
				_localctx = new StatementFunctionDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(91);
				match(FUNCTION);
				setState(92);
				match(ID);
				setState(93);
				match(LPAREN);
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(94);
					match(ID);
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SEP) {
						{
						{
						setState(95);
						match(SEP);
						setState(96);
						match(ID);
						}
						}
						setState(101);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(104);
				match(RPAREN);
				setState(105);
				statement();
				}
				break;
			case 10:
				_localctx = new StatementReturnContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(106);
				match(RETURN);
				setState(107);
				condition(0);
				setState(108);
				match(EOS);
				}
				break;
			case 11:
				_localctx = new StatementConditionContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(110);
				condition(0);
				setState(111);
				match(EOS);
				}
				break;
			case 12:
				_localctx = new StatementEOSContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(113);
				match(EOS);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
